recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:5: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def carre(l:Double):Unit {
                         ^FourSquare:16: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def grandcarre (l:Double):Unit {
                               ^FourSquare:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  avance(l)
  ^FourSquare:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite(90)
  ^FourSquare:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  avance(l)
  ^FourSquare:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite(90)
  ^FourSquare:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  avance(l)
  ^FourSquare:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite(90)
  ^FourSquare:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  avance(l)
  ^FourSquare:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite(90)
  ^FourSquare:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  baisseCrayon()
  ^FourSquare:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  carre(l)
  ^FourSquare:19: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite(90)
  ^FourSquare:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  carre(l)
  ^FourSquare:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite(90)
  ^FourSquare:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  carre(l)
  ^FourSquare:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite(90)
  ^FourSquare:24: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  carre(l)
  ^FourSquare:25: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite(90)
  ^FourSquare:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  leveCrayon()
  ^