recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  
}

def carre(l:Double):Unit {
  avance(l)
  droite(90)
  avance(l)
  droite(90)
  avance(l)
  droite(90)
  avance(l)
  droite(90)
}

def grandcarre (l:Double):Unit {
  baisseCrayon()
  carre(l)
  droite(90)
  carre(l)
  droite(90)
  carre(l)
  droite(90)
  carre(l)
  droite(90)
  leveCrayon()
}